--- a/404.md
+++ b/404.md
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1>我的第一个标题</h1>
-    <p>我的第一个段落。</p>
+    <h1>404错误</h1>
+    <p>文件无法找到</p>
 </body>
 </html>
